feat(app): app finished

--- a/microfrontends/mf_videos/src/styles/index.css
+++ b/microfrontends/mf_videos/src/styles/index.css
@@ -64,7 +64,7 @@
   right: 0.75rem;
   top: 0.75rem;
   transition-duration: 300ms;
-  transition-property: color;
+  transition-property: background-color, color;
   transition-timing-function: cubic-bezier(0.2, 0, 0, 1);
   z-index: 1;
   width: 2.5rem;
@@ -77,6 +77,14 @@
 
 .template-video-card-button__star:hover {
   color: #ffd700;
+}
+
+.template-video-card-button__star--active {
+  background-color: #ffd700;
+}
+
+.template-video-card-button__star--active:hover {
+  color: #ffffff;
 }
 
 .template-video-card-info {
